feature/ Add groups to dashboard/ fixed clan routes

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -58,55 +58,72 @@
                     </div>
                     <!-- select a game dropdown list -->
                     <div class="card-body">
-                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                            <option selected>Select a Game</option>
-                            <option value="1">Valorant</option>
-                            <option value="2">CSGO</option>
-                            <option value="3">Destiny</option>
-                            <option value="4">LoL</option>
-                        </select>
-                        <!-- select platform dropdown list -->
-                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                            <option selected>Select a Platform</option>
-                            <option value="1">PC</option>
-                            <option value="2">PS</option>
-                            <option value="3">Xbox</option>
-                        </select>
+                        <form id="createFrom">
+                              
+                                <div class="mb-3">
+                                    <textarea class="form-control" id="groupName" rows="1" placeholder="Enter Group Name"></textarea>
+                                </div>
 
-                        <!-- select region dropdown list -->
-                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                            <option selected>Select a Region</option>
-                            <option value="1">Oceania</option>
-                            <option value="2">North America</option>
-                            <option value="3">South America</option>
-                            <option value="4">Asia</option>
-                            <option value="5">Africa</option>
-                            <option value="6">Europe</option>
-                        </select>
-
-                        <!-- select no# player dropdown list -->
-                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                            <option selected>Players Required</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                        </select>
-
-                        <div class="mb-3">
-
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"
-                            placeholder="Please add more info to your group post so people know what you're looking for! (i.e. mic required etc)"></textarea>
-                        </div>
-              
+                            <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" id="select_game">
+                                <option selected>Select a Game</option>
+                                <option value="Valorant">Valorant</option>
+                                <option value="CSGO">CSGO</option>
+                                <option value="Destiny">Destiny</option>
+                                <option value="LoL">LoL</option>
+                            </select>
+                            <!-- select platform dropdown list -->
+                            <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" id="select_platform">
+                                <option selected>Select a Platform</option>
+                                <option value="PC">PC</option>
+                                <option value="PS">PS</option>
+                                <option value="Xbox">Xbox</option>
+                            </select>
+                    
+                            <!-- select region dropdown list -->
+                            <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" id="select_region">
+                                <option selected>Select a Region</option>
+                                <option value="Oceania">Oceania</option>
+                                <option value="North America">North America</option>
+                                <option value="South America">South America</option>
+                                <option value="Asia">Asia</option>
+                                <option value="Africa">Africa</option>
+                                <option value="Europe">Europe</option>
+                            </select>
+                    
+                            <!-- select no# player dropdown list -->
+                            <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" id="select_players">
+                                <option selected>Players Required</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                            </select>
+                             {{!-- <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" id="userId">
+                                <option selected>User id</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                            </select> --}}
+                    
+                            <div class="mb-3">
+                    
+                                <textarea class="form-control" id="groupBio" rows="5"
+                                    placeholder="Please add more info to your group post so people know what you're looking for! (i.e. mic required etc)"></textarea>
+                            </div>
+                    
                             <!-- Button -->
                             <button type="button" class="btn btn-primary" id="post_button">POST GROUP</button>
-                        </div>
+                        </form>
+                    </div>
                     </div>
                 </div>
             </div> <!-- end of outer row -->
     </div>
     </div>
+    <script src="/js/dashboard.js"></script>
 
