removed SVG background/ edited class names to fix styling bugs

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -18,7 +18,7 @@
       
     
     <!-- main content -->
-    <div class="container-fluid">
+    <div class="container-fluid position-absolute top-50 start-50 translate-middle">
     <div class="row flex-wrap">
         <div class="col-md-9">
             <div class="card" style="margin-top: 20px; margin-right: 10px; margin-bottom: 20px; margin-left: 10px;">
