--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -1,8 +1,8 @@
    
    {{!-- Landing Page/Submit/Login buttons --}}
-    <div class="position-absolute top-30 start-50 translate-middle">
-        <button type="button" class="btn btn-primary btn-lg" id="loginBtn">Login</button>
-        <button type="button" class="btn btn-primary btn-lg" id="signUpBtn">Sign Up</button>
+    <div class="position-absolute top-50 start-50 translate-middle landingpage">
+        <button type="button" class="btn btn-primary btn-lg landingpage" id="loginBtn">Login</button>
+        <button type="button" class="btn btn-primary btn-lg landingpage" id="signUpBtn">Sign Up</button>
     </div>
 
     <script src="/js/landingNavigation.js"></script>
