--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,10 +1,10 @@
 {{!-- Dashboard elements --}}
 
 {{!-- Header Bar --}}
-<nav class="navbar navbar-expand-lg navbar-light bg-light align-middle fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-dark align-middle fixed-top">
   <img src="/photos/Valorant-Logo.png" class="nav-logo" alt="valorant logo">
   <img src="/photos/CSGO-Logo.png" class="nav-logo nav-logo-csgo" alt="csgo logo">
-  <p class="navbar-brand">UNIFIED GG</p>
+  <p class="navbar-brand text-light">UNIFIED GG</p>
   <img src="/photos/Destiny-Logo.png" class="nav-logo" alt="destiny logo">
   <img src="/photos/League-Logo.png" class="nav-logo" alt="league logo">
 </nav>
@@ -21,18 +21,19 @@
     <div class="container-fluid">
     <div class="row flex-wrap">
         <div class="col-md-9">
-            <div class="card" style="margin-top: 20px; margin-right: 10px; margin-bottom: 20px; margin-left: 10px;">
-                <h3 class="card-header text-center card-header-clan">
+            <div class="card bg-dark" style="z-index: 1300; margin-top: 20px; margin-right: 10px; margin-bottom: 20px; margin-left: 10px;">
+                <h3 class="card-header text-center card-header-clan text-white">
                     Open Groups
                 </h3>
-                <div class="card-body" style="overflow-y: scroll; max-height: 600px;">
+                <div class="card-body" style="overflow-y: scroll; max-height: 600px; margin-right: 7px;">
                     <div class="row row-cols-1 row-cols-md-3 g-4">
                         {{#each clans as |clan index| }}
                             <div class="col col-clan">
-                                <div class="card h-100">
-                                    <div class="card-header text-center">
-                                        <a href="/clan/">Group {{clan.id}} - {{clan.name}}</a>
+                                <div class="card h-100 gaming-card group-background">
+                                    <div class="card-header text-center text-center group-title">
+                                        <p class="text-dark m-0"><strong>Group {{clan.id}} - {{clan.name}}</strong></p>
                                     </div>
+
                                     <div class="card-body">
                                         <p class="text-dark"><strong> Game:</strong> {{clan.game}}</p>
                                         <p class="text-dark"><strong>Platform:</strong> {{clan.platform}}</p>
@@ -52,13 +53,13 @@
 
             <!-- Group -->
             <div class="col-md-3">
-                <div class="card" style="margin-top: 20px; margin-right: 10px; margin-bottom: 20px;">
-                    <div id="group" class="card-header text-center">
-                        <h3 id="group_name">Create Group</h3>
+                <div class="card bg-dark" style="z-index: 1300; margin-top: 20px; margin-right: 10px; margin-bottom: 20px; height: calc(100% - 40px);">
+                    <div id="group" class="card-header text-center text-white card-header-clan">
+                        <h3 id="group_name bg-dark">Create Group</h3>
                     </div>
                     <!-- select a game dropdown list -->
                     <div class="card-body">
-                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                        <select class="form-select form-select-lg mb-3 gaming-card" aria-label=".form-select-lg example">
                             <option selected>Select a Game</option>
                             <option value="1">Valorant</option>
                             <option value="2">CSGO</option>
@@ -66,7 +67,7 @@
                             <option value="4">LoL</option>
                         </select>
                         <!-- select platform dropdown list -->
-                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                        <select class="form-select form-select-lg mb-3 gaming-card" aria-label=".form-select-lg example">
                             <option selected>Select a Platform</option>
                             <option value="1">PC</option>
                             <option value="2">PS</option>
@@ -74,7 +75,7 @@
                         </select>
 
                         <!-- select region dropdown list -->
-                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                        <select class="form-select form-select-lg mb-3 gaming-card" aria-label=".form-select-lg example">
                             <option selected>Select a Region</option>
                             <option value="1">Oceania</option>
                             <option value="2">North America</option>
@@ -85,7 +86,7 @@
                         </select>
 
                         <!-- select no# player dropdown list -->
-                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                        <select class="form-select form-select-lg mb-3 gaming-card" aria-label=".form-select-lg example">
                             <option selected>Players Required</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
@@ -95,14 +96,16 @@
                             <option value="6">6</option>
                         </select>
 
-                        <div class="mb-3">
+                        <div class="mb-3 gaming-card">
 
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"
                             placeholder="Please add more info to your group post so people know what you're looking for! (i.e. mic required etc)"></textarea>
                         </div>
-              
-                            <!-- Button -->
-                            <button type="button" class="btn btn-primary" id="post_button">POST GROUP</button>
+                        <div class="card bg-dark border-0">                           
+                            <div class="d-flex justify-content-center">
+                                <!-- Button -->
+                                <button type="button" class="btn btn-primary " id="post_button">POST GROUP</button>
+                            </div>                           
                         </div>
                     </div>
                 </div>
