--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,18 +12,18 @@
 
 <body>
     {{!-- SideBar Menu --}}
-    <div class="position-absolute top-0 start-20 translate-middle" style="z-index: 1100;">
+    <div class="position-absolute top-0 start-20 translate-middle" style="z-index: 2000;">
         <button class="btn btn-primary sidebar" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Menu
+            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Info
         </button>
     </div>
-    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
-        aria-labelledby="offcanvasWithBothOptionsLabel">
+    <div class="offcanvas offcanvas-start bg-dark" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+        aria-labelledby="offcanvasWithBothOptionsLabel" style="z-index: 2000;">
         <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel" style="text-align: center;">Find a group to play with on your favourite online games!</h5>
+            <h5 class="offcanvas-title text-white" id="offcanvasWithBothOptionsLabel" style="text-align: center;">Find a group to play with on your favourite online games!</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body">
+        <div class="offcanvas-body bg-dark">
             <div class="card mb-3">
                 <div class="card-body" style="display: flex; flex-direction: column; align-items: center;">
                     <img src="/photos/Valorant-Logo.png" style="margin-top: -5px; height: 50px; width: auto;">
@@ -71,6 +71,7 @@
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
     crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
     
 </body>
 
