dashboard styling complete

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,7 +21,7 @@
     <div class="container-fluid position-absolute top-50 start-50 translate-middle">
     <div class="row flex-wrap">
         <div class="col-md-9">
-            <div class="card bg-dark" style="z-index: 1300; margin-top: 20px; margin-right: 10px; margin-bottom: 20px; margin-left: 10px;">
+            <div class="card bg-dark" style="z-index: 1300; margin-top: 20px; margin-right: 10px; margin-bottom: 20px; margin-left: 10px; height: calc(100% - 40px);">
                 <h3 class="card-header text-center card-header-clan text-white">
                     Open Groups
                 </h3>
@@ -58,10 +58,10 @@
                         <h3 id="group_name bg-dark">Create Group</h3>
                     </div>
                     <!-- select a game dropdown list -->
-                    <div class="card-body">
-                        <form id="createFrom">
+                    <div class="card-body ">
+                        <form id="createFrom ">
                               
-                                <div class="mb-3">
+                                <div class="mb-3 gaming-card">
                                     <textarea class="form-control" id="groupName" rows="1" placeholder="Enter Group Name"></textarea>
                                 </div>
 
