added logout functional logic

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                 </div>
-                <button type="button" class="btn btn-outline-danger position-absolute top-0 start-0 translate-middle" style="z-index:2000"><strong>LOGOUT</strong></button>
+                <button type="button" class="btn btn-outline-danger position-absolute top-0 start-0 translate-middle" style="z-index:2000" id="logoutBtn"><strong>LOGOUT</strong></button>
             </div>
     
     
