Added functional links to and from sign up and login pages

--- a/views/profilePage.handlebars
+++ b/views/profilePage.handlebars
@@ -1,34 +1,12 @@
-<head>
-	<title>Profile Card</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-	<div class="small-aboutme">
-		<img src="" alt="avatar" class="profile-img">
-		<h1>Ben Swansson</h1>
-		<p class="short-description"></p>
-		<p>looking for a carry for LoL</p>
-		
-	   <div class="dropdown-game-status">
-	    <select id="busy" name="busy">
-	      <option value="">Select an option:</option>
-	      <option value="away">Away</option>
-	      <option value="busy">Busy</option>
-		  <option value="busy">In game </option>
-	    </select>
-	  </div>
-
-      <div class="dropdowns-profile-page">
-	    <select id="game" name="game">
-	      <option value="">Select an option:</option>
-	      <option value="away">LoL</option>
-	      <option value="busy">game 2</option>
-          <option value="busy">game 3</option>
-          <option value="busy">game 4</option>
-	    </select>
-	  </div>
-
-	</div>
-
-</body>
-</html>
+  <div class="card position-absolute top-50 start-50 translate-middle  " style="width: 35rem; background: grey;">
+    
+    <div class="card-body">
+      <h1>Username:... </h1>
+      <p class="card-text"> bio:... </p>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <button type="button" class="btn btn-success" style="float: right; margin: 5px;">Save Bio</button>
+      </div>
+    </div>
+  </div>
