--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -1,4 +1,4 @@
- <div class="container">
+ <div class="container position-absolute top-50 start-50 translate-middle w-25" id="signUpBox">
         <div class="card2">
 
         <h2>Sign Up</h2>
@@ -21,7 +21,8 @@
           </div>
 
           <div id="Reg"></div>
-          <button id="sign-up">Register</button>
+          <button id="sign-up" style="margin-left: 10px">Register</button>
+          <button id="loginBtn" style="margin-right: 10px">Login</button>
 
         </form>
 
