edited button text to reflect action

--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -22,7 +22,7 @@
 
           <div id="Reg"></div>
           <button id="sign-up" style="margin-left: 10px">Register</button>
-          <button id="loginBtn" style="margin-right: 10px">Login</button>
+          <button id="loginBtn" style="margin-right: 10px">Return toLogin</button>
 
         </form>
 
